# kiosk

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
resources/: README.md  main.qml  resources.qrc
src/: Commands.hpp  Interpreter.cpp  Interpreter.h  KioskContext.cpp  KioskContext.h  KioskContext.hpp  main.cpp
